<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterPage"
    android:background="@drawable/gradiente">

    <EditText
        android:id="@+id/editTextFirstName"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_below="@+id/imageView2"
        android:layout_marginTop="85dp"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        android:selectAllOnFocus="true"
        android:background="#11000000"

        android:textSize="18sp"
        />
    <EditText
        android:id="@+id/editTextLastName"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/editTextFirstName"
        android:layout_alignStart="@+id/editTextFirstName"
        android:layout_below="@+id/editTextFirstName"
        android:layout_marginTop="20dp"
        android:ems="10"

        android:hint="@string/last_name"
        android:textSize="18sp"
        android:background="#11000000"
        android:inputType="textPersonName"
        android:selectAllOnFocus="true"

        />

    <EditText
        android:id="@+id/editTextUser"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_below="@+id/editTextLastName"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textEmailAddress"

        android:drawableLeft="@drawable/ic_action_user"
        android:background="#11000000"

        android:textSize="18sp"
        />

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/editTextUser"
        android:layout_alignStart="@+id/editTextUser"
        android:layout_below="@+id/editTextUser"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:drawableStart="@drawable/ic_action_lock"
        android:drawableEnd="@drawable/ic_action_eye"
        android:drawableLeft="@drawable/ic_action_lock"
        android:drawableRight="@drawable/ic_action_eye"
        android:hint="@string/password"
        android:imeActionLabel="Sign in"
        android:imeOptions="actionDone"
        android:background="#11000000"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"

         />
    <EditText
        android:id="@+id/editPassword2"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/editPassword"
        android:layout_alignStart="@+id/editPassword"
        android:layout_below="@+id/editPassword"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:drawableStart="@drawable/ic_action_lock"
        android:drawableEnd="@drawable/ic_action_eye"
        android:drawableLeft="@drawable/ic_action_lock"
        android:drawableRight="@drawable/ic_action_eye"
        android:hint="@string/confirm_password"
        android:imeActionLabel="Sign in"
        android:imeOptions="actionDone"
        android:background="#11000000"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"

         />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewReg"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@+id/editPassword2"
        android:layout_centerHorizontal="true"
        app:cardBackgroundColor="#000"
        app:cardElevation="10dp"
        app:cardCornerRadius="25dp"
        android:layout_marginTop="30dp"

        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/RegisterPage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textColor="#fff"

                android:textSize="18sp"
                android:layout_centerInParent="true"/>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/orReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/cardViewReg"

        android:text="OR"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_centerHorizontal="true"
        />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewLogReg"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@+id/orReg"
        android:layout_centerHorizontal="true"
        app:cardBackgroundColor="#000"
        app:cardElevation="10dp"
        app:cardCornerRadius="25dp"


        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/LoginReg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_into_existing_account"
                android:textColor="@color/white"
                android:layout_centerInParent = "true"
                android:textSize="18sp"/>
        </RelativeLayout>





    </androidx.cardview.widget.CardView>


</RelativeLayout>