<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/gradiente"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="170dp"
        android:layout_height="150dp"
        android:layout_marginTop="43dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/meson_1" />

    <androidx.cardview.widget.CardView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="69dp"
        android:layout_marginBottom="-69dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/jiret"
                android:textFontWeight="900"
                android:layout_marginTop="30dp"
                android:text="@string/login_header"
                android:textSize="60sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/chiret_regular"
                android:text="@string/login_small_header"
                android:textSize="30sp"
                android:layout_marginLeft="50dp"/>

            <EditText
                android:id="@+id/editTextTextPersonName3"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:drawableLeft="@drawable/ic_action_user"
                android:elevation="10dp"
                android:ems="10"
                android:hint="@string/username"
                android:inputType="textEmailAddress"
                android:selectAllOnFocus="true"
                android:textSize="18sp"
                android:background="@drawable/rounded_corners"/>

            <EditText
                android:id="@+id/editTextTextPassword"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:drawableLeft="@drawable/ic_action_lock"
                android:elevation="10dp"
                android:ems="10"
                android:hint="@string/password"
                android:imeActionLabel="Sign in"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:selectAllOnFocus="true"
                android:background="@drawable/rounded_corners"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="40dp"
                app:cardBackgroundColor="#000"
                app:cardCornerRadius="25dp"
                app:cardElevation="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/login"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:elevation="10dp"
                        android:text="@string/login"

                        android:textColor="#fff"
                        android:textSize="18sp" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/or"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:elevation="30dp"
                android:text="OR"
                android:textSize="18sp" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView2"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"
                app:cardBackgroundColor="#000"
                app:cardCornerRadius="25dp"
                app:cardElevation="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:elevation="10dp"
                        android:text="@string/register_here"
                        android:textColor="@color/white"
                        android:textSize="18sp" />
                </RelativeLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>