<?xml version="1.0" encoding="utf-8"?>

<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".MainActivity"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="180dp"
            app:cardBackgroundColor="#FF5722">
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="20dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/search"
                android:textColorHint="@color/secondary_text"
                android:gravity="start"
                android:drawableStart="@drawable/ic_baseline_search_24"
                android:drawableLeft="@drawable/ic_baseline_search_24" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/categories"
            android:textSize="20sp"
            android:textColor="@color/primary_text"
            android:layout_marginVertical="5dp"
            android:layout_marginHorizontal="20dp"/>

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:orientation="horizontal"
                android:paddingVertical="10dp"
                android:clipToPadding="false">

                <androidx.cardview.widget.CardView
                    android:layout_width="100dp"
                    android:layout_height="150dp"
                    android:layout_marginEnd="20dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="10dp"
                    android:layout_marginRight="20dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:weightSum="3"
                        android:background="#e2e2e2">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/newSort"
                            android:textSize="12sp"
                            android:layout_marginTop="5dp"
                            android:textColor="@color/secondary_text"/>

                        <ImageView
                            android:id="@+id/newOpening"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:srcCompat="@drawable/cafe" />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="20dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="10dp"
                    android:layout_marginRight="20dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:weightSum="3"
                        android:background="#FFC107">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/popular"
                            android:textSize="12sp"
                            android:layout_marginTop="5dp"
                            android:textColor="@color/secondary_text"/>

                        <ImageView
                            android:id="@+id/flame"
                            android:layout_width="40dp"
                            android:layout_marginHorizontal="30dp"
                            android:layout_height="wrap_content"
                            app:srcCompat="@drawable/flame"/>
                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="20dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="10dp"
                    android:layout_marginRight="20dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:weightSum="3"
                        android:background="#96cdef">

                      <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/cost"
                            android:textSize="12sp"
                            android:layout_marginTop="5dp"
                            android:textColor="@color/secondary_text"/>

                        <ImageView
                            android:id="@+id/money_bag"
                            android:layout_width="50dp"
                            android:layout_marginHorizontal="25dp"
                            android:layout_height="wrap_content"
                            app:srcCompat="@drawable/money_bag"/>
                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="50dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="10dp"
                    android:layout_marginRight="50dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:weightSum="3"
                        android:background="#839bff">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/noCost"
                            android:layout_marginTop="5dp"
                            android:textSize="12sp"
                            android:textColor="@color/secondary_text"/>

                        <ImageView
                            android:id="@+id/piggy_bank"
                            android:layout_width="match_parent"
                            android:layout_marginHorizontal="5dp"
                            android:layout_height="wrap_content"
                            app:srcCompat="@drawable/broke"/>
                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </HorizontalScrollView>

        <androidx.cardview.widget.CardView
            android:id="@+id/res1"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:contentDescription="NITSUH"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp"
            app:cardCornerRadius="10dp"
            android:onClick="openRestaurantDetails"

            app:cardBackgroundColor="#FFC107">

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/res2"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:contentDescription="MESI"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp"
            app:cardCornerRadius="10dp"
            android:onClick="openRestaurantDetails"
            app:cardBackgroundColor="#FFC107">

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/res3"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:contentDescription="RES3"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp"
            app:cardCornerRadius="10dp"
            android:onClick="openRestaurantDetails"

            app:cardBackgroundColor="#FFC107">

        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/res4"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:contentDescription="RES4"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp"
            app:cardCornerRadius="10dp"
            android:onClick="openRestaurantDetails"

            app:cardBackgroundColor="#FFC107">


        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/res5"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:contentDescription="RES5"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp"
            app:cardCornerRadius="10dp"
            android:onClick="openRestaurantDetails"

            app:cardBackgroundColor="#FFC107">


        </androidx.cardview.widget.CardView>
    </LinearLayout>

</ScrollView>
